Fixed segments overlapping during page transition

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -4,6 +4,10 @@
 	margin-top: 1vh;
 }
 
+.ios :host #date-segment {
+	margin-bottom: 1vh;
+}
+
 .lesson-card {
 	width: 100%;
 	height: 13vh;
